get rid of stuff in JavaHelper [maybe it's wrong]